# learning

./: .gitignore  README.md
CCode/: .gitignore  CMakeLists.txt
CCode/src/include/: citfdef.h  exams.h
CCode/src/learning/: array_demo.c  learning.h
CCode/src/leetcode/000/: 10_regular-expression-matching.c  13_roman-to-integer.c  16_3sum-closest.c  20_valid-parentheses.c  23_merge-k-sorted-lists.c  28_implement-strstr.c  2_add-two-numbers.c  31_next-permutation.c  35_search-insert-position.c  36_isValidSudoku.c  38_count-and-say.c  53_maximum-subarray.c  5_longest-palindromic-substring.c  60_permutation-sequence.c  64_minimum-path-sum.c  67_add-binary.c  6_zigzag-conversion.c  70_climbing-stairs.c  7_reverse-integer.c  81_search-in-rotated-sorted-array-ii.c  92_reverse-linked-list-ii.c  97_interleaving-string.c  9_palindrome-number.c
CCode/src/leetcode/001/: 104-maxDepth.c  136-singleNumber.c  143-reorderList.c  160-getIntersectionNode.c
CCode/src/leetcode/002/: 202_happy_number.c  206_reverse-linked-list.c  217-containsDuplicate.c  242_valid-anagram.c  265_paint-house-ii.c  276_paint-fence.c  278_first-bad-version.c
CCode/src/leetcode/003/: 316_remove-duplicate-letters.c  321_create-maximum-number.c  344_reverse-string.c
CCode/src/leetcode/004/: 406_queue-reconstruction-by-height.c  442_findDuplicates.c  448_findDisappearedNumbers.c  455_assign-cookies.c  480_sliding-window-median.c
CCode/src/leetcode/005/: 514_freedom-trail.c  572_subtree-of-another-tree.c
CCode/src/leetcode/006/: 635_design-log-storage-system.c
CCode/src/leetcode/007/: 739_daily-temperatures.c  758_bold-words-in-string.c  783_minimum-distance-between-bst-nodes.c
CCode/src/leetcode/008/: 820_short-encoding-of-words.c
CCode/src/leetcode/009/: 925_long-pressed-name.c  973_k-closest-points-to-origin.c
CCode/src/leetcode/010/: 1025_divisor-game.c  1055_shortest-way-to-form-string.c
CCode/src/leetcode/011/: 1109_corporate-flight-bookings.c  1151_minimum-swaps-to-group-all-1s-together.c
CCode/src/leetcode/012/: 1269_number-of-ways-to-stay-in-the-same-place-after-some-steps.c
CCode/src/leetcode/014/: 1486_xor-operation-in-an-array.c
CCode/src/leetcode/015/: 1564_put-boxes-into-the-warehouse-i.c
CCode/src/public/: debug.c  pub_stub.c  pub_system.c  public.c  stack.h
Cpp/: CMakeLists.txt  README.md  func1.csv  func2.csv  log.txt  main.cpp
Golang/: README.md  go.mod  main.go
Python/: README.md  classs_test.py  snake_game.py
Rust/: Cargo.toml  (+1 more)
cplusplus/: CMakeLists.txt
cplusplus/open_src/cJSON/: cJSON.c
cplusplus/public/: public.h
cplusplus/src/exercise/: exercise_testcase.h  fileop.cpp
cplusplus/src/learning/: learning_testcase.h
cplusplus/src/learning/src/: cpp_pointer.cpp  derived_class.cpp  storage_duration.cpp
cplusplus/src/leetcode/: leetcode.h  leetcode_testcase.cpp
cplusplus/src/leetcode/000/: 20-valid-parentheses.cpp  twosum.cpp
(+227 files in other folders)
